# SceneSample

./: .gitmodules  Base2DSceneCoordinatedMapper.cpp  Base2DSceneCoordinatedMapper.hpp  CMakeLists.txt  FlatColor.frag  FlatColor.vert  FlatColorSceneMaterial.cpp  FlatColorSceneMaterial.hpp  I2DSceneCoordinatesMapper.hpp  I2DSceneManipulator.hpp  IChildMouseEventListener.hpp  LICENSE  LineStrip.cpp  LineStrip.hpp  LogTrackSceneCameraManipulator.cpp  LogTrackSceneCameraManipulator.hpp  QtQuickBased2DSceneCoordinatesMapper.cpp  QtQuickBased2DSceneCoordinatesMapper.hpp  QtQuickBased2DSceneManipulatorTool.cpp  QtQuickBased2DSceneManipulatorTool.hpp  Scene.cpp  Scene.hpp  SceneArea.cpp  SceneArea.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneItem.cpp  SceneItem.hpp  SceneMaterial.cpp  SceneMaterial.hpp  ShiftArea.qml  main.cpp  main.qml  resources.qrc  utils.cpp  utils.hpp
